--- a/index.html
+++ b/index.html
@@ -1,31 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Unsubscribe Confirmation</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-        }
-
-        .confirmation {
-            max-width: 600px;
-            margin: 0 auto;
-            text-align: center;
-        }
-    </style>
+    <title>Email Submission Form</title>
 </head>
-
 <body>
-    <div class="confirmation">
-        <h2>Unsubscribe Confirmation</h2>
-        <p>Thank you for updating your email preferences. You have been successfully unsubscribed from our mailing list. We're sorry to see you go.</p>
-        <p>If you ever change your mind, you can resubscribe at any time. If you have any concerns or need assistance, please don't hesitate to contact our customer support at support@example.com.</p>
-        <p><a href="https://example.com">Return to Our Homepage</a></p>
-    </div>
+    <form action="https://your-form-submission-service.com/submit" method="post">
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required>
+        <button type="submit">Unsubscribe</button>
+    </form>
 </body>
-
 </html>
