--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Email Submission Form</title>
+    <title>Email Unsubscribe Form</title>
 </head>
 <body>
-    <form action="https://your-form-submission-service.com/submit" method="post">
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required>
-        <button type="submit">Unsubscribe</button>
-    </form>
+
+<form action="https://formspree.io/bhavya.affordme@gmail.com" method="post">
+    <label for="email">Email:</label>
+    <input type="email" id="email" name="email" required>
+    <button type="submit">Unsubscribe</button>
+</form>
+
 </body>
 </html>
