--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<form action="https://formspree.io/bhavya.affordme@gmail.com" method="post">
+<form action="https://formspree.io/f/meqyenen" method="post">
     <label for="email">Email:</label>
     <input type="email" id="email" name="email" required>
     <button type="submit">Unsubscribe</button>
