--- a/index.html
+++ b/index.html
@@ -4,15 +4,67 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Unsubscribe Form</title>
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: #f4f4f4;
+            text-align: center;
+            margin: 0;
+            padding: 0;
+        }
+
+        h1 {
+            color: #333;
+        }
+
+        form {
+            max-width: 400px;
+            margin: 20px auto;
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        label {
+            display: block;
+            margin-bottom: 8px;
+            color: #333;
+        }
+
+        select,
+        input {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 15px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-sizing: border-box;
+        }
+
+        button {
+            background-color: #4CAF50;
+            color: white;
+            padding: 12px 20px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            font-size: 16px;
+        }
+
+        button:hover {
+            background-color: #45a049;
+        }
+    </style>
 </head>
 <body>
     <h1>Unsubscribe Form</h1>
     <form action="https://formspree.io/f/meqyenen" method="POST">
         <label for="reason">Reason for Unsubscribing:</label>
         <select id="reason" name="reason">
-            <option value="GDPR">GDPR Concerns</option>
-            <option value="Pricing">Issues with Pricing</option>
             <option value="RemoteWork">Remote Work Challenges</option>
+            <option value="Pricing">Issues with pricing</option>
+            <option value="GDPR">GDPR Concerns</option>
             <!-- Add more options as needed -->
         </select>
         <br>
